Ripristina il file Voti.html per la verifica del voto con interfaccia utente e logica di controllo

--- a/3-BIF#2024-2025/INFORMATICA/HTML/VERIFICHE/Mancini_Massimiliano_1A_22-05-2025.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/VERIFICHE/Mancini_Massimiliano_1A_22-05-2025.html
@@ -1,120 +1,10 @@
 <html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Es 1 Verifica</title>
-    <style>
-      body {
-        font-family: "Arial", sans-serif;
-        background: linear-gradient(135deg, #74ebd5, #acb6e5);
-        color: #333;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-
-      .container {
-        background: #fff;
-        padding: 20px 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        text-align: center;
-        width: 100%;
-        max-width: 400px;
-      }
-
-      h1 {
-        font-size: 24px;
-        margin-bottom: 20px;
-        color: #444;
-      }
-
-      label {
-        font-size: 16px;
-        margin-bottom: 10px;
-        display: block;
-        color: #555;
-      }
-
-      input[type="number"] {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-      }
-
-      button {
-        background: #4caf50;
-        color: #fff;
-        border: none;
-        padding: 10px 20px;
-        font-size: 16px;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background 0.3s ease;
-      }
-
-      button:hover {
-        background: #45a049;
-      }
-
-      #result {
-        margin-top: 20px;
-        font-size: 18px;
-        font-weight: bold;
-      }
-
-      .emoji {
-        font-size: 50px;
-        display: inline-block;
-        animation: bounce 1s infinite;
-      }
-
-      .happy {
-        color: green;
-      }
-
-      .angry {
-        color: red;
-      }
-
-      @keyframes bounce {
-        0%,
-        100% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-10px);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Verifica Voto</h1>
-      <label for="vote">Inserisci il voto (0-10):</label>
-      <input type="number" id="vote" min="0" max="10" />
-      <button onclick="checkVote()">Verifica</button>
-      <div id="result"></div>
-    </div>
-
-    <script>
-      function checkVote() {
-        const vote = document.getElementById("vote").value;
-        const resultDiv = document.getElementById("result");
-        resultDiv.innerHTML = "";
-
-        if (vote >= 6) {
-          resultDiv.innerHTML = '<span class="emoji happy">😊</span> Promosso!';
-        } else {
-          resultDiv.innerHTML = '<span class="emoji angry">😡</span> Bocciato!';
-        }
-      }
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Es 1 Verifica HTML/CSS JavaScript</title>
+</head>
+<body>
+  
+</body>
 </html>
