--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
@@ -1,30 +1,69 @@
+<!DOCTYPE html>
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex04.html</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="..//CSS/Ex04.css" />
   </head>
-  <body>
-    <p>ciao ...</p>
-    <p>ciao. Vedrai che non va a capo</p>
-    <h1>Rock</h1>
-    <h2 class="roger">Roger</h2>
-    <h3>Waters</h3>
-    <h4>Pink Floyd</h4>
-    <h1>Pippo</h1>
-    <p><span class="cammino">Nel mezzo del</span></p>
-    <p>
-      <span class="vita">cammin di nostra vita</span>
-      <span class="selva">mi ritrovai per una selva oscura</span>
-      <span class="via">che la diritta via era smarrita.</span>
-    </p>
-    <p>...</p>
-    <img src="..//MEDIA/koala.jpg"" width="300" height="200">
-    <div></div>
-    <a href="#">Geografia o gazzetta?</a>
+  <body class="bg-light text-dark">
+    <div class="container py-5">
+      <header class="text-center mb-4">
+        <h1 class="display-4">Rock</h1>
+        <h2 class="roger text-primary">Roger</h2>
+        <h3 class="text-secondary">Waters</h3>
+        <h4 class="text-muted">Pink Floyd</h4>
+      </header>
 
-    <div></div>
-    <iframe src="https://www.ilgiornale.it/" class="frame"> </iframe>
+      <section class="mb-4">
+        <p class="lead">ciao ...</p>
+        <p>ciao. Vedrai che non va a capo</p>
+      </section>
+
+      <section class="mb-4">
+        <h1>Pippo</h1>
+        <p>
+          <span class="cammino fw-bold">Nel mezzo del</span>
+        </p>
+        <p>
+          <span class="vita text-success">cammin di nostra vita</span>
+          <span class="selva text-danger"
+            >mi ritrovai per una selva oscura</span
+          >
+          <span class="via text-warning">che la diritta via era smarrita.</span>
+        </p>
+        <p>...</p>
+      </section>
+
+      <section class="text-center mb-4">
+        <img
+          src="..//MEDIA/koala.jpg"
+          class="img-fluid rounded shadow"
+          alt="Koala"
+          width="300"
+          height="200"
+        />
+      </section>
+
+      <section class="text-center mb-4">
+        <a href="#" class="btn btn-primary">Geografia o gazzetta?</a>
+      </section>
+
+      <section class="mb-4">
+        <iframe
+          src="https://www.ilgiornale.it/"
+          class="frame border rounded w-100"
+          style="height: 500px"
+        ></iframe>
+      </section>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
