--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
@@ -4,42 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex04.html</title>
-    <!-- Bootstrap CSS -->
+    <!-- Importing Bootstrap CSS for styling and responsive design -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Linking an external CSS file for additional custom styles -->
     <link rel="stylesheet" href="..//CSS/Ex04.css" />
   </head>
   <body class="bg-light text-dark">
+    <!-- Main container with padding -->
     <div class="container py-5">
+      <!-- Header section with centered text and various heading levels -->
       <header class="text-center mb-4">
         <h1 class="display-4">Rock</h1>
+        <!-- Main title -->
         <h2 class="roger text-primary">Roger</h2>
+        <!-- Subheading with primary color -->
         <h3 class="text-secondary">Waters</h3>
+        <!-- Subheading with secondary color -->
         <h4 class="text-muted">Pink Floyd</h4>
+        <!-- Subheading with muted text -->
       </header>
 
+      <!-- First section with paragraphs -->
       <section class="mb-4">
         <p class="lead">ciao ...</p>
+        <!-- Lead paragraph with larger font -->
         <p>ciao. Vedrai che non va a capo</p>
+        <!-- Regular paragraph -->
       </section>
 
+      <!-- Second section with styled text -->
       <section class="mb-4">
         <h1>Pippo</h1>
+        <!-- Heading -->
         <p>
           <span class="cammino fw-bold">Nel mezzo del</span>
+          <!-- Bold text -->
         </p>
         <p>
           <span class="vita text-success">cammin di nostra vita</span>
+          <!-- Green text -->
           <span class="selva text-danger"
             >mi ritrovai per una selva oscura</span
           >
+          <!-- Red text -->
           <span class="via text-warning">che la diritta via era smarrita.</span>
+          <!-- Yellow text -->
         </p>
         <p>...</p>
+        <!-- Placeholder text -->
       </section>
 
+      <!-- Section with an image -->
       <section class="text-center mb-4">
         <img
           src="..//MEDIA/koala.jpg"
@@ -48,22 +66,27 @@
           width="300"
           height="200"
         />
+        <!-- Responsive image with rounded corners and shadow -->
       </section>
 
+      <!-- Section with a button -->
       <section class="text-center mb-4">
         <a href="#" class="btn btn-primary">Geografia o gazzetta?</a>
+        <!-- Button styled with Bootstrap primary color -->
       </section>
 
+      <!-- Section with an embedded iframe -->
       <section class="mb-4">
         <iframe
           src="https://www.ilgiornale.it/"
           class="frame border rounded w-100"
           style="height: 500px"
         ></iframe>
+        <!-- Embedded webpage with rounded border and full width -->
       </section>
     </div>
 
-    <!-- Bootstrap JS -->
+    <!-- Importing Bootstrap JavaScript for interactive components -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
